================================================================
This is a modified version of LorePlay, originally by Justinon.
================================================================
original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfitsandmore.html

NOTE : this modified version is still under the Artistic License 2.0


[IdleEmotes]
- Optimized the Camera Spin Disabler feature.

Version 1.6.77 : by Calamath
[LorePlay]:Markarth support
- In the wilderness of the Reach and the vast underworld, the add-on automatically recognizes you are in the adventure zone.
- Updated location database for Markarth DLC. Markarth and Karthwasten are now recognized as cities. Harrowstorm ritual sites in the Reach are now recognized.
- Updated API version to 100033 (ESO 6.2.x : Markarth)
- Updated embedded LibEventHandler version to 1.2.93 (AddOnVersion: 1293).
[LoreWear]:improvement of location recognition engine.
- Addressed an issue that could not be correctly recognized when entering Hollow City in Coldharbour from the West Gate.

Version 1.6.76 : by Calamath
[LorePlay]:Stonethorn support
- Updated location database to support several zones. Grayhome and Blackreach Mzark Cavern are now recongnized as adventure zone.
- Added 'AddOnVersion' directive to manifest file
- Updated API version to 100032 (ESO 6.1.x : Stonethorn)
- Updated embedded LibEventHandler version to 1.2.92 (AddOnVersion: 1292).
[IdleEmotes] Reworked the Camera Spin Disabler feature.
- The Camera Spin Disabler feature now supports gamepad mode. (but as-is basis)
- Addressed unintended behavior that occurred in various situations, including the recent issue of not being able to manually switch Outfit styles on the status screen.
- Special thanks to Baertram for his contributions to above issue!
--
-- NOTE : Camera Spin Disabler
-- The original author Justinon probably created this feature long ago, inspired by Garkin's 'No, thank you!' add-on.