@@ -62,6 +62,8 @@ local strings = {
 	SI_LOREPLAY_PANEL_IE_EXERCISE_IN_ZONE_SW_TIPS	= "Determines whether or not your character can perform exercise emotes when idle outside of cities.", 
 	SI_LOREPLAY_PANEL_IE_WORSHIP_SW_NAME			= "Can Worship/Pray", 
 	SI_LOREPLAY_PANEL_IE_WORSHIP_SW_TIPS			= "Determines whether or not your character can perform prayer and worship emotes when idle in general.", 
+	SI_LOREPLAY_PANEL_IE_ALLOWED_IN_HOUSING_NAME	= "Allow emotes in Housing Editor", 
+	SI_LOREPLAY_PANEL_IE_ALLOWED_IN_HOUSING_TIPS	= "Allows for idle emotes to be performed while in housing editor mode.", 
 	SI_LOREPLAY_PANEL_IE_CAMERA_SPIN_DISABLER_NAME	= "Camera Spin Disabler", 
 	SI_LOREPLAY_PANEL_IE_CAMERA_SPIN_DISABLER_TIPS	= "Allows for emotes to be performed while in menus. Disables camera spin in menus. Removes '" .. GetString(SI_PLAYEREMOTEPLAYFAILURE0) .. "' message.", 
 	SI_LOREPLAY_PANEL_LE_SET_OUTFIT_CITY_NAME		= "Set City Outfit", 
