@@ -7,6 +7,7 @@ NOTE : this modified version is still under the Artistic License 2.0
 
 
 [IdleEmotes]
+- No longer allowed performing idle emotes by default while in housing editor mode. No more frustration when arranging your furniture.
 - Optimized the Camera Spin Disabler feature.
 
 Version 1.6.77 : by Calamath
